separated CSS and JS into separate files

--- a/nrtw-main/index.html
+++ b/nrtw-main/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FoodFixer - Connecting Surplus Food to Communities</title>
+    <title>FoodFixer - Connecting Surplus Food to Communities</title>a
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="script.js"></script>
@@ -124,7 +124,7 @@
 
           <div class="mt-12">
             <img
-              src="https://via.placeholder.com/800x400/f97316/ffffff?text=FoodFixer+Community+Action"
+              src="https://global.unitednations.entermediadb.net/assets/mediadb/services/module/asset/downloads/preset/assets/2019/07/15-07-2019_UNICEF_food-security_311096.jpg/image1170x530cropped.jpg"
               alt="Community food sharing"
               class="rounded-3xl mx-auto shadow-lg"
             />
